# RobertLab

./: .gitignore  README.md  app.ipynb  database.db  database.xlsx  ff.py  main.py  pyproject.toml  requirements.txt  test.ipynb  test.py
.github/workflows/: main_robertdashboard.yml
app/: __init__.py  __main__.py
app/api/: main.py
app/config/: __init__.py
app/core/analytics/: __init__.py  features.py
app/core/ext/: __init__.py  clean.py  progress.py
app/core/strategies/: __init__.py  account.py  base.py  ew.py  other.py
app/database/: database.xlsx
app/database/client/: __init__.py  conn.py
app/database/models/: __init__.py  meta.py  mixins.py
app/utils/: __init__.py
next-web/: package-lock.json  package.json
next-web/app/: layout.jsx  page.jsx
next-web/components/: Nav.jsx
pkg/: __init__.py
pkg/src/: __init__.py  __main__.py  main.py  test.ipynb  universe.json
pkg/src/core/: __init__.py
pkg/src/data/: __init__.py  universe.py
pkg/src/misc/: __init__.py  charts.py
pkg/src/utils/: __init__.py
pkg/src/web/: __init__.py  main.py  state.py  utils.py
pkg/web/: __init__.py  main.py
pkg/web/data/: __init__.py
pkg/web/pages/: __init__.py  about_robert.py  base.py  dashboard.py  efficient_frontier.py  futures.py  glossary.py  market_regime.py  multi_strategy.py  multistrategy.py
react-dev/: package-lock.json  package.json
src/: __init__.py  __main__.py  config.py  main.py  test.ipynb  test.py
src/api/: dependencies.py  main.py
src/api/auth/: jwt_handler.py
src/backend/: __init__.py  __main__.py  config.py
src/backend/data/: __init__.py  base.py  kr_equity.csv  streamlit.py
src/backend/database/: conn.py
src/backend/utils/: __init__.py
src/config/: __init__.py
src/core/: __init__.py  metrics.py  optimizer.py  strategy.py
src/core/analytics/: __init__.py  estimators.py  features.py  metrics.py  utils.py
src/core/benchmarks/: __init__.py  base.py  ext.py
src/core/data/: __init__.py  prices.py
src/core/ext/: __init__.py  periods.py  store.py  trading.py
src/core/factors/: __init__.py  base.py  multi.py  single.py
src/core/metrics/: __init__.py  base.py  rolling.py
src/core/portfolio/: objectives.py  optimizer.py
src/core/portfolios/: __init__.py  base.py  constraints.py  ext.py  objectives.py  optimizer.py  property.py
src/core/regimes/: __init__.py  base.py  ext.py
src/core/signals/: __init__.py  base.py
src/core/states/: __init__.py
src/core/strategies/: __init__.py  account.py  base.py  book.py  ew.py  ext.py  multi.py  multistrategy.py  parser.py  rebalancer.py  strategy.py
src/core/strategy/: __init__.py  account.py  base.py
src/core/universes/: __init__.py
src/database/: __init__.py  base.py  conn.py  database.db  database.xlsx  fred.py  query.py
src/database/client/: conn.py
src/database/data/: __init__.py
src/database/models/: __init__.py  meta.py  mixins.py  query.py
src/database/raw/: us_etf.json
src/frontend/: main.py
src/frontend/components/: __init__.py  constraint_set.py  future.py  repeatable.py  session.py  single.py
src/frontend/data/: __init__.py  (+1 more)
src/misc/: calc_shares.ipynb
src/utils/: __init__.py
src/web/: main.py
test/: test_records.py
web/: __init__.py  main.py
web/components/: base.py  macro.py  momentum.py  performances.py
web/css/: base.css
web/state/: __init__.py  strategy.py
(+137 files in other folders)
