[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "src"
authors = [{ name = "Robert Han", email = "roberthan1125@gmail.com" }]
description = "My package description"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "BSD-3-Clause" }
classifiers = ["Framework :: Django", "Programming Language :: Python :: 3"]
dependencies = [
    "requests",
    "numpy",
    "pandas",
    "scipy",
    "statsmodels",
    "streamlit",
    "streamlit-option-menu",
    "plotly",
    "scikit-learn",
]

dynamic = ["version"]

[project.optional-dependencies]
pdf = []
rest = []

[project.scripts]
robo = "main:start"


[tool.pylint]
max-line-length = 88
disable = [
    "C0103", # (invalid-name)
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "R0903", # (too-few-public-methods)
    "R0913", # (too-many-arguments)
    "W0105", # (pointless-string-statement)
]
